force-app/main/default/objects/Account/fields/DevOps_27_Feb__c.field-meta.xml
<CustomField>
    <fullName>DevOps_27_Feb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevOps 27 Feb</label>
    <type>Checkbox</type>
</CustomField>