force-app/main/default/objects/Account/fields/Test_Ahsan__c.field-meta.xml
<CustomField>
    <fullName>Test_Ahsan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Ahsan</label>
    <type>Checkbox</type>
</CustomField>