force-app/main/default/objects/Account/fields/Test_Check__c.field-meta.xml
<CustomField>
    <fullName>Test_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Check</label>
    <type>Checkbox</type>
</CustomField>